# PowerOptimiser

./: README.md  pyproject.toml  render.yaml  scripts_generate_sample_data.py
configs/: default.yaml
src/power_optimiser/: __init__.py  battery.py  cli.py  config.py  data.py  main.py  reporting.py  tariffs.py  web.py
tests/: test_battery.py  test_tariffs.py  test_web.py
