[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-optimiser"
version = "0.1.0"
description = "Domestic battery arbitrage and tariff optimisation model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.1.0",
  "pandas>=2.2.0",
  "pulp>=2.8.0",
  "matplotlib>=3.8.0",
  "pyyaml>=6.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0"
]


[project.scripts]
power-optimiser = "power_optimiser.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
